# instance-builder

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
instance_builder/: __init__.py  builder.py  getter.py  lib.py  setter.py
tests/: test_builder.py  test_getter.py  test_setter.py
